--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             </div>
             <div class="contact-container">
                 <div class="contact-form-section animate-slide-left">
-                    <form class="contact-form morphing-form" onsubmit="handleSubmit(event)">
+                    <form class="contact-form morphing-form" onsubmit="handleContactSubmit(event)">
                         <div class="form-group floating-group" data-delay="0.1">
                             <input type="text" id="name" placeholder="Your Name" required class="morphing-input">
                             <label for="name" class="floating-label">Full Name *</label>
