--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="splash-logo-fix.css">
     <link rel="stylesheet" href="mobile-responsive.css">
     <script src="welcome-splash.js"></script>
-    
+    <script src="auth-check.js"></script>
 </head>
 
 <body>
@@ -28,7 +28,8 @@
                 <li><a href="services.html" class="nav-link">Services</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
-
+                <li><a href="admin.html" class="nav-link">Admin</a></li>
+                <li><button onclick="logout()" class="nav-link logout-btn">Logout</button></li>
             </ul>
 
             <div class="mobile-menu-toggle">
