--- a/admin.html
+++ b/admin.html
@@ -42,6 +42,8 @@
                             <th>Email</th>
                             <th>Service</th>
                             <th>Location</th>
+                            <th>Start Date</th>
+                            <th>Type</th>
                             <th>Requirements</th>
                         </tr>
                     </thead>
